fix(saved-filters): [PLTDA-3137] limits for text length of saved filters (#5916)
* fix(saved-filters): [PLTDA-3137] added boundaries for filter length; text truncations; added tooltips

* fix(saved-filters): [PLTDA-3137] fix style linting

* fix(saved-filters): [PLTDA-3137] width of the saved filter button is a tiny bit bigger

--- a/src/pages/stats/common/filters/SavedFiltersActions/ApplySavedFilters/ApplySavedFilters.less
+++ b/src/pages/stats/common/filters/SavedFiltersActions/ApplySavedFilters/ApplySavedFilters.less
@@ -8,4 +8,20 @@
         letter-spacing: -0.14px;
         padding: 12px;
     }
+    .dropdownItem,
+    .applyFiltersButton {
+        & span {
+            max-width: 305px;
+            display: inline-block;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+    }
+
+    .applyFiltersButton {
+        & span {
+            max-width: 130px;
+        }
+    }
 }
